added some papers about checkpointing and bibtex

--- a/fault_tolerance_report.tex
+++ b/fault_tolerance_report.tex
@@ -214,6 +214,7 @@ The three fault-tolerant mechanisms that will be dealt with in this report are:
 \item Abd-El-Barr, Design and analysis of reliable and fault-tolerant computer systems. Seems to treat fault tolerance of networks in depth. Chps. 1, 2, 3, 4, Ch. 13 Algorithm-Based Fault tolerance.
 \item Goloubeva, Software-Implemented Hardware Fault tolerance. Ch1. Background and Ch. 4 Achieving fault tolerance.
 \item Checkpointing and recovery, \url{http://srel.ee.duke.edu/sw_ft/node9.html}
+\item Jonathan Heathcote, Network tester, \url{http://network-tester.readthedocs.org/en/stable/}
 \end{itemize}
 
 \newpage
@@ -446,7 +447,7 @@ A fault in the \textbf{boot ROM} can be easily detected during start-up if the b
 \subsection{Backpressure}
 \begin{figure}[htbp]
 	\centering
-	\includegraphics[width=0.7\linewidth]{images/backpressure2.pdf}
+	\includegraphics[width=0.6\linewidth]{images/backpressure2.pdf}
 	\caption{Backpressure}	
 	\label{fig:backpressure}
 \end{figure}
