reorganized some content

--- a/fault_tolerance_report.bib
+++ b/fault_tolerance_report.bib
@@ -67,7 +67,7 @@
 }
 
 @misc{checkpointing,
-  author = {XXXXXXX},
+  author = {Kishor Trivedi},
   title = {{Software fault tolerance}},
   howpublished = "\url{http://srel.ee.duke.edu/sw_ft/node9.html}",
   year = {2008}, 
