added more detail to process migration

--- a/fault_tolerance_report.bib
+++ b/fault_tolerance_report.bib
@@ -163,7 +163,7 @@
   publisher = {IEEE}
 }
 
-@MISC{networktester,
+@MISC{heathcote2015networktester,
   author = {Jonathan Heathcote},
   title = {{Network Tester}},
   howpublished = {\url{http://network-tester.readthedocs.org/en/stable/}},
@@ -361,7 +361,7 @@
 @MISC{checkpointing,
   author = {Kishor Trivedi},
   title = {{Software fault tolerance}},
-  howpublished = {\url{http://srel.ee.duke.edu/sw_ft/node9.html}},
+  howpublished = {\url{http://srel.ee.duke.edu/sw_ft}},
   year = {2008},
   note = {[Online; accessed 19-July-2008]}
 }
